First draft of assignment 3 done

--- a/Oblig 3/assignment3_daniehei.tex
+++ b/Oblig 3/assignment3_daniehei.tex
@@ -106,7 +106,7 @@ This gives us that
 
 \subsection{d)}
 
-\todo{See over this!} 
+Because the gas have intrinsic features, like thermal and quantum effects, that always will lead to finite absorption features.
 
 \subsection{e)}
 
@@ -345,9 +345,25 @@ This gives us that
 \begin{equation}
 \Delta E = \frac{32}{15}\pi^2 G \rho_0^2 r_s^5 = 1.477\cdot 10^{57} \text{ergs}.
 \end{equation}
-\todo{Check this!!!}
+
 
 \subsection{e)}
+We know that the energy given from supernova feedback is given
+\begin{equation}
+E_{SN, tot} = E_{SN}\xi M_{*},
+\end{equation}
+where $E_{SN} = 10^{54}$ erg is the energy given per supernova, $\xi = 0.004$ is the number of supernovas per solar mass and $M_{*}$ is the total stellar mass. This is can be read from the plot as about $10^{7.3} M_{\circ}$. This gives 
+\begin{equation}
+E_{SN, tot} = 0.004 /M_{\odot} \cdot 10^{51}\cdot 10^{7.3} M_{\odot} = 7.981 \cdot 10^{55} \text{ ergs}.
+\end{equation}
+This is not enough energy to create the core.
+
+\subsection{f)}
+Since the mass of the halo is reduced by a factor 10, we get a much smaller $M_{*}$. From figure 1 we see that this goes as $M_{*} \propto M^3$, meaning that the stellar mass and thus the total energy given from the supernova feedback is reduced by a factor 1000. We therefor get $E_{SN, tot} \approx 7.981 \cdot 10^{52}$ erg. Since $\Delta E \propto M^2$ we only have reduction of a factor 100. Meaning that $\Delta E \approx 1.477\cdot 10^{55}$. So the energy is still a bit lower than the limit to get a core. 
+
+Both of them are under the energy limit, which seems strange. I may have used the wrong $\rho_0$, thus getting the wrong $\Delta E$, I'm not sure...
+
+
 
 
 \end{document}
